Work on MID-1809 - implementation of new state popup window. Disabled for now since there are more urgent things to fix. Will continue in 2.4.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
@@ -18,6 +18,8 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
     <div wicket:id="confirmDeletePopup" />
     <div wicket:id="movePopup" />
+    <div wicket:id="addDeletePopup" />
+
     <!-- todo fix styles for all header with cog, it must be unified somehow !!!! [lazyman] -->
     <div class="row">
         <div class="col-md-12 clearfix">
