--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/PersonalInfoPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/PersonalInfoPanel.html
@@ -17,7 +17,7 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <table>
+    <table class="table table-striped table-condensed">
         <tr>
             <td colspan="2"><b><wicket:message key="PersonalInfoPanel.lastLogin"/></b></td>
         </tr>
