minor css updates for dashboard and simple error panel.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/SimpleErrorPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/SimpleErrorPanel.html
@@ -21,10 +21,10 @@
             <div class="row header check-table-header">
                 <div class="col-xs-10">
                     <input type="checkbox" disabled/>
-                    <i class="silk-error" wicket:id="icon"></i>
+                    <i class="fa fa-fw fa-exclamation-circle text-danger" wicket:id="icon"></i>
                     <span class="description" wicket:id="description"/>
                     <a wicket:id="link">
-                        <span class="name" wicket:id="showMore"/>
+                        <span wicket:id="showMore"/>
                     </a>
                 </div>
             </div>
