fix for error displaying (accounts on user details). MID-1749

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/CheckTableHeader.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/CheckTableHeader.html
@@ -20,8 +20,10 @@
     <div class="col-xs-10">
         <input type="checkbox" wicket:id="check"/>
         <i class="silk-user" wicket:id="icon"></i>
+        <span wicket:id="status"/>
         <a wicket:id="link"><span class="name" wicket:id="name"/></a>
         <span class="description" wicket:id="description"/>
+        <a wicket:id="showMore"><wicket:message key="CheckTableHeader.showMore"/></a>
     </div>
     <div class="col-xs-2 cog" wicket:id="menu"/>
 </wicket:panel>
