--- a/gui/admin-gui/src/main/webapp/less/midpoint/prism-container.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/prism-container.less
@@ -52,7 +52,9 @@ div.tableForm div.header {
       }
 
       span.description {
-
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
       }
     }
 
