--- a/gui/admin-gui/src/main/webapp/css/bootstrap-select/bootstrap-multiselect.css
+++ b/gui/admin-gui/src/main/webapp/css/bootstrap-select/bootstrap-multiselect.css
@@ -12,24 +12,30 @@
   padding: 0;
 }
 .multiselect-container > li > a.multiselect-all label {
-  font-weight: bold;
+  font-weight: 700;
 }
 .multiselect-container > li > label.multiselect-group {
   margin: 0;
-  padding: 3px 20px 3px 20px;
+  padding: 3px 20px;
   height: 100%;
+  font-weight: 700;
+}
+.multiselect-container > li > a {
+  padding: 0;
 }
 .multiselect-container > li > a > label {
   margin: 0;
   height: 100%;
   cursor: pointer;
-  font-weight: normal;
+  font-weight: 400;
+  /*padding: 3px 20px 3px 40px; was in original file [lazyman] */
+  padding: 3px 20px 3px 10px !important;
 }
 .multiselect-container > li > a > label.radio,
 .multiselect-container > li > a > label.checkbox {
   margin: 0;
 }
-.multiselect-container > li > a > label > input[type="checkbox"] {
+.multiselect-container > li > a > label > input[type=checkbox] {
   margin-bottom: 5px;
 }
 .btn-group > .btn-group:nth-child(2) > .multiselect.btn {
