--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.html
@@ -98,7 +98,8 @@
                 </label>
 
                 <div class="col-lg-4">
-                    <input type="text" class="form-control input-sm" placeholder="Default from" wicket:id="defaultFrom">
+                    <input type="text" class="form-control input-sm" wicket:id="defaultFrom"
+                           wicket:message="placeholder:SystemConfigPanel.mail.defaultFrom">
                 </div>
             </div>
             <div class="form-group">
@@ -142,7 +143,7 @@
                 </label>
 
                 <div class="col-lg-4">
-                    <input type="text" class="form-control input-sm" wicket:id="username"
+                    <input type="text" class="form-control input-sm" wicket:id="username" autocomplete="off"
                            wicket:message="placeholder:SystemConfigPanel.mail.username">
                 </div>
             </div>
@@ -152,7 +153,7 @@
                 </label>
 
                 <div class="col-lg-4">
-                    <input type="password" class="form-control input-sm" wicket:id="password"
+                    <input type="password" class="form-control input-sm" wicket:id="password" autocomplete="off"
                            wicket:message="placeholder:SystemConfigPanel.mail.password">
                 </div>
             </div>
@@ -172,6 +173,7 @@
                 </div>
             </div>
 
+            <wicket:remove>
             <!-- Connector frameworks configuration commented out for now
             <h3>
                 <wicket:message key="SystemConfigPanel.title.connectorFramework"/>
@@ -185,7 +187,7 @@
                 </div>
             </div>
             -->
-
+            </wicket:remove>
         </div>
     </div>
 </wicket:panel>
