--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/H3Header.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/H3Header.html
@@ -18,7 +18,9 @@
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
     <div class="col-xs-10" style="padding-left: 5px;">
-        <h3 wicket:id="title"/>
+        <span wicket:id="status"/>
+        <h3 style="display: inline-block;" wicket:id="title"/>
+        <a wicket:id="showMore"><wicket:message key="H3Header.showMore"/></a>
     </div>
     <div class="col-xs-2 cog" wicket:id="menu"/>
 </wicket:panel>
