--- a/gui/admin-gui/src/main/webapp/less/midpoint/page-user-details.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/page-user-details.less
@@ -61,6 +61,11 @@ div.assignment-item {
       }
     }
   }
+
+//  just quick fix for assignment editor
+  div.row div.col-xs-9 {
+    padding: 3px 0;
+  }
 }
 
 
