--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/CheckTableHeader.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/CheckTableHeader.html
@@ -22,7 +22,8 @@
 
         <i class="silk-user" wicket:id="icon"></i>
         <span wicket:id="status"/>
-        <i class="fa fa-clock-o text-warning" wicket:id="trigger"/>
+        <i class="fa fa-clock-o text-success" wicket:id="trigger"/>
+        <i class="fa fa-shield text-warning" wicket:id="protected" wicket:message="title:CheckTableHeader.protected"/>
 
         <a wicket:id="link"><span class="name" wicket:id="name"/></a>
         <span class="description" wicket:id="description"/>
