--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/CheckTableHeader.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/CheckTableHeader.html
@@ -20,7 +20,7 @@
     <div class="col-xs-10">
         <input type="checkbox" wicket:id="check"/>
 
-        <i class="silk-user" wicket:id="icon"></i>
+        <i wicket:id="icon"/>
         <span wicket:id="status"/>
         <i class="fa fa-clock-o text-success" wicket:id="trigger"/>
         <i class="fa fa-shield text-warning" wicket:id="protected" wicket:message="title:CheckTableHeader.protected"/>
