--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ResourcesPopup.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ResourcesPopup.html
@@ -18,10 +18,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
 	<div class="popupWindow">
-        <div class="popupContent">
+        <form wicket:id="searchForm" class="form-inline pull-right"
+              style="padding: 5px;">
+
+            <div wicket:id="basicSearch" />
+        </form>
+
+        <div class="clearfix">
             <div wicket:id="table"/>
         </div>
-        <div class="popupButtons">
+
+        <div class="pull-right" style="padding: 0 15px;">
             <a class="btn btn-success" wicket:id="add" />
         </div>
    	</div>
