--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/paging/PagingSizePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/paging/PagingSizePanel.html
@@ -16,11 +16,23 @@
 
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
-<wicket:panel>
-    <table class="table table-striped table-condensed" wicket:id="table" />
+    <wicket:panel>
+        <div style="text-align: left">
 
-    <div wicket:id="pagingSize" />
-    <div wicket:id="paging" />
+            <form class="form-inline pull-left search-form" wicket:id="pagingForm">
+                <label class="col-lg-5">
+                    <wicket:message key="PagingSizePanel.label.pagingSize" />
+                </label>
 
-</wicket:panel>
+                <div class="col-lg-5 form-group">
+                    <input class="form-control input-sm" wicket:id="pagingSize"/>
+                </div>
+
+                <span class="btn-group">
+                    <a class="btn btn-default btn-sm" wicket:id="setPagingButton"/>
+                </span>
+            </form>
+
+        </div>
+    </wicket:panel>
 </html>
