Commenting out unused JS popover window.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/CountToolbar.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/CountToolbar.html
@@ -21,9 +21,11 @@
         <td wicket:id="td" style="text-align: right;">
             <span wicket:id="count"/>
 
-            <button id="asdf" type="button" class="btn btn-xs btn-default">
-                <i class="fa fa-cog"></i>
-            </button>
+            <!--<button id="asdf" type="button" class="btn btn-xs btn-default">-->
+                <!--<i class="fa fa-cog"></i>-->
+            <!--</button>-->
+
+            <!--
             <script>
 $(document).ready(function() {
     $("#asdf").popover({
@@ -34,6 +36,7 @@ $(document).ready(function() {
     });
 });
             </script>
+            -->
         </td>
     </tr>
 
