Delete All IDentities popup css fix

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/dialog/DeleteAllDialog.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/dialog/DeleteAllDialog.html
@@ -22,7 +22,7 @@
             </span>
         </p>
 
-        <div class="row">
+        <div class="row" style="margin: 0px 0px 0px 0px">
             <div class="col-md-4">
                 <label><wicket:message key="deleteAllDialog.label.users" /></label>
             </div>
@@ -34,7 +34,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="margin: 0px 0px 0px 0px">
             <div class="col-md-4">
                 <label><wicket:message key="deleteAllDialog.label.org" /></label>
             </div>
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="margin: 0px 0px 0px 0px">
             <div class="col-md-4">
                 <label><wicket:message key="deleteAllDialog.label.shadow.account" /></label>
             </div>
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="margin: 0px 0px 0px 0px">
             <div class="col-md-4">
                 <label><wicket:message key="deleteAllDialog.label.shadow.role" /></label>
             </div>
@@ -70,7 +70,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="margin: 0px 0px 0px 0px">
             <div class="col-md-4">
                 <label><wicket:message key="deleteAllDialog.label.shadow.org" /></label>
             </div>
