--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ResourcesPopup.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ResourcesPopup.html
@@ -28,9 +28,9 @@
             <div wicket:id="table"/>
         </div>
 
-        <div class="pull-right" style="padding: 0 15px;">
+        <p align="center">
             <a class="btn btn-success" wicket:id="add" />
-        </div>
+        </p>
    	</div>
 </wicket:panel>
 </html>
