--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/capability/AddCapabilityDialog.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/capability/AddCapabilityDialog.html
@@ -13,21 +13,13 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+<wicket:panel xmlns:wicket="http://wicket.apache.org">
+    <div wicket:id="content">
+        <div wicket:id="table" />
 
-<!DOCTYPE html>
-<html xmlns:wicket="http://wicket.apache.org">
-<wicket:panel>
-
-    <h3 wicket:id="label"></h3>
-
-    <dl class="dl-horizontal">
-        <dt>
-            <label>
-                <wicket:message key="capabilityValuePanel.label.enabled" />
-            </label>
-        </dt>
-        <dd><input wicket:id="enabled" type="checkbox" value="checked"/></dd>
-    </dl>
-
+        <p align="center">
+            <a class="btn btn-primary btn-sm" wicket:id="addButton" />
+            <a class="btn btn-default btn-sm" wicket:id="cancelButton "/>
+        </p>
+    </div>
 </wicket:panel>
-</html>
