--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/top/TopMenuBar.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/top/TopMenuBar.html
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="#" class="navbar-brand">
+                <a wicket:id="logoLink" class="navbar-brand">
                     <span class="logo">&nbsp;</span>
                 </a>
             </div>
