--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/capability/CapabilityPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/capability/CapabilityPanel.html
@@ -42,6 +42,7 @@
 
             <div class="main-button-bar">
                 <a wicket:id="capabilityAdd" class="btn btn-success"><i class="fa fa-fw fa-plus"/></a>
+                <a class="btn btn-success" wicket:id="saveButton"><i class="fa fa-floppy-o" /></a>
             </div>
         </div>
 
