MID-1730 - CapabilityEditor small code cleanup.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/capability/CapabilityPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/capability/CapabilityPanel.html
@@ -28,10 +28,9 @@
                 <tbody wicket:id="tableRows">
                     <tr wicket:id="capabilityRow">
                         <td class="capability-item">
-                            <span wicket:id="capabilityName" />
-                        </td>
-                        <td>
-                            <a wicket:id="capabilityEdit" class="btn btn-primary btn-sm"><i class="fa fa-pencil-square-o" /></a>
+                            <a wicket:id="capabilityLink">
+                                <span wicket:id="capabilityName" />
+                            </a>
                         </td>
                         <td>
                             <a wicket:id="capabilityDelete" class="btn btn-danger btn-sm"><i class="fa fa-fw fa-minus" /></a>
