MID-1903 - fixing few issues/adding some improvements

--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -16,6 +16,29 @@
 @import "tree-theme-basic.less";
 @import "operation-result.less";
 
+/**
+ *  Auto-complete drop-down choice styles
+ */
+div.wicket-aa {
+    background-color: white;
+    border-width: 1px;
+    border-color: #cccccc;
+    border-style: solid;
+    padding: 2px;
+    margin: 1px 1px 1px 1px;
+    text-align:left;
+}
+div.wicket-aa ul {
+    list-style:none; padding: 2px;
+    margin: 0;
+}
+
+div.wicket-aa ul li.selected {
+    background-color: #99ccff;
+    padding: 2px;
+    margin:0;
+}
+
 div.wicket-debug-buttons {
   border: 1px solid #000000;
   background-color: #ffffff;
