few minor (mostly visual) improvements in Object Policies editor

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/ObjectPolicyDialog.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/ObjectPolicyDialog.html
@@ -28,7 +28,7 @@
                 <wicket:container wicket:id="repeater">
                     <div class="col-md-6" wicket:id="textWrapper">
                         <div class="input-group">
-                            <input type="text" class="form-control" wicket:id="property">
+                            <input type="text" class="form-control input-sm" wicket:id="property">
                             <span class="input-group-addon">
                                 <input type="checkbox" wicket:id="oidBound">
                             </span>
