--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaHandlingStep.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaHandlingStep.html
@@ -17,97 +17,42 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <!--schema handling-->
+
     <div class="row capability">
 
-        <!--TODO - edit xs/sm/md class column sizes-->
         <!-- First row - object types list -->
+        <!--TODO - edit xs/sm/md class column sizes-->
         <div class="col-xs-5 col-sm-4 col-sm-offset-2 col-md-4 col-md-offset-2 col-lg-2 col-lg-offset-1">
-            <h3>Object Types</h3>
-            <table class="table table-striped table-condensed" style="margin-bottom: 0px">
-                <tr>
-                    <td class="capability-item">
-                        <a>objectType 1</a>
-                    </td>
-                    <td><a class="btn btn-danger btn-sm"><i class="fa fa-fw fa-minus"/></a></td>
-                </tr>
-                <tr class="success">
-                    <td class="capability-item">
-                       <a>Default Account - DCOM Users (obce)</a>
-                    </td>
-                    <td><a class="btn btn-danger btn-sm"><i class="fa fa-fw fa-minus"/></a></td>
-                </tr>
-                <tr>
-                    <td class="capability-item">
-                        <a>objectType 3</a>
-                    </td>
-                    <td><a class="btn btn-danger btn-sm"><i class="fa fa-fw fa-minus"/></a></td>
-                </tr>
-                <tr>
-                    <td class="capability-item">
-                        <a>objectType 4</a>
-                    </td>
-                    <td><a class="btn btn-danger btn-sm"><i class="fa fa-fw fa-minus"/></a></td>
-                </tr>
-                <tr>
-                    <td class="capability-item">
-                        <a>objectType 5</a>
-                    </td>
-                    <td><a class="btn btn-danger btn-sm"><i class="fa fa-fw fa-minus"/></a></td>
-                </tr>
-                <tr>
-                    <td class="capability-item">
-                       <a>objectType 6</a>
-                    </td>
-                    <td><a class="btn btn-danger btn-sm"><i class="fa fa-fw fa-minus"/></a></td>
-                </tr>
-                <tr>
-                    <td class="capability-item">
-                       <a>objectType 7</a>
-                    </td>
-                    <td><a class="btn btn-danger btn-sm"><i class="fa fa-fw fa-minus"/></a></td>
-                </tr>
-                <tr>
-                    <td class="capability-item">
-                       <a>objectType 8</a>
-                    </td>
-                    <td><a class="btn btn-danger btn-sm"><i class="fa fa-fw fa-minus"/></a></td>
-                </tr>
-                <tr>
-                    <td class="capability-item">
-                       <a>objectType 9</a>
-                    </td>
-                    <td><a class="btn btn-danger btn-sm"><i class="fa fa-fw fa-minus"/></a></td>
-                </tr>
-                <tr>
-                    <td class="capability-item">
-                        <a>objectType 10</a>
-                    </td>
-                    <td><a class="btn btn-danger btn-sm"><i class="fa fa-fw fa-minus"/></a></td>
-                </tr>
+            <h3><wicket:message key="SchemaHandlingStep.label.objectTypes" /></h3>
+
+            <table class="table table-striped table-condensed" style="margin-bottom: 10px">
+                <tbody wicket:id="tableRows">
+                    <tr wicket:id="objectTypeRow">
+                        <td class="capability-item">
+                            <a wicket:id="objectTypeLink">
+                                <span wicket:id="objectTypeName" />
+                            </a>
+                        </td>
+                        <td>
+                            <a wicket:id="objectTypeDelete" class="btn btn-danger btn-sm">
+                                <i class="fa fa-fw fa-minus" />
+                            </a>
+                        </td>
+                    </tr>
+                </tbody>
             </table>
 
-            <div align="right">
-                <ul class="pagination pagination-sm">
-                    <li><a href="#">&laquo;</a></li>
-                    <li class="active"><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">&raquo;</a></li>
-                </ul>
-            </div>
+            <div wicket:id="objectTypePaging" />
 
-            <div class="main-button-bar">
-                <a class="btn btn-success">
-                    Add New Object Type
-                    <!--<i class="fa fa-fw fa-plus"/>-->
+            <div class="main-button-bar" style="margin-top: -25px;">
+                <a wicket:id="objectTypeAddButton" class="btn btn-success">
+                    <span><wicket:message key="SchemaHandlingStep.button.add" /></span>
                 </a>
             </div>
-
         </div>
 
-        <!-- Second row - objectType editor -->
-        <div class="col-xs-7 col-sm-6 col-md-offset-1 col-md-3">
+        <!-- Second row - object type editor -->
+        <div wicket:id="objectTypeConfig"  class="col-xs-7 col-sm-6 col-md-offset-1 col-md-3">
             <h3>Default Account - DCOM Users (obce)</h3>
 
             <dl class="dl-horizontal">
@@ -150,14 +95,31 @@
                 </dd>
             </dl>
 
-            <dl class="dl-horizontal">
-                <dt>
-                    <label>Default</label>
-                </dt>
-                <dd>
-                    <input type="checkbox" value="checked"/>
-                </dd>
-            </dl>
+            <!-- Default and Dependency -->
+            <div class="row">
+                <div class="col-xs-6">
+                    <dl class="dl-horizontal">
+                        <dt>
+                            <label>Default</label>
+                        </dt>
+                        <dd>
+                            <input type="checkbox" value="checked"/>
+                        </dd>
+                    </dl>
+                </div>
+                <div class="col-xs-6">
+                    <dl class="dl-horizontal">
+                        <dt>
+                            <label>Dependencies</label>
+                        </dt>
+                        <dd>
+                            <a class="btn btn-sm btn-primary" title="Edit">
+                                <i class="fa fa-pencil-square-o"/>
+                            </a>
+                        </dd>
+                    </dl>
+                </div>
+            </div>
 
             <dl class="dl-horizontal">
                 <dt>
@@ -209,55 +171,7 @@
                 </dd>
             </dl>
 
-            <!-- Dependencies -->
-            <!-- TODO - add dependency editor on panel to save vertical space in second row -->
-            <dl class="dl-horizontal">
-                <dt>
-                    <label>Dependency</label>
-                </dt>
-                <dd class="cap-dl-multivalue">
-                    <div class="input-group">
-                        <select class="form-control input-sm">
-                            <option>Strict</option>
-                            <option>Relaxed</option>
-                            <option>Lax</option>
-                        </select>
-                        <!-- TODO - find a way to insert small input here -->
-                        <!--<input type="text" class="form-control input-xs" value="1"/>-->
-                        <!--&nbsp;-->
-                        <span class="input-group-btn">
-                            <a class="btn btn-sm btn-danger" title="Remove">
-                                <i class="fa fa-minus"/>
-                            </a>
-                            <a class="btn btn-sm btn-success" title="Add">
-                                <i class="fa fa-plus"/>
-                            </a>
-                        </span>
-                    </div>
-                </dd>
-                <dd class="cap-dl-multivalue">
-                    <div class="input-group">
-                        <select class="form-control input-sm">
-                            <option>Strict</option>
-                            <option>Relaxed</option>
-                            <option>Lax</option>
-                        </select>
-                        <!-- TODO - find a way to insert small input here -->
-                        <!--<input type="text" class="form-control input-sm" value="2"/>-->
-                        <!--&nbsp;-->
-                        <span class="input-group-btn">
-                            <a class="btn btn-sm btn-danger" title="Remove">
-                                <i class="fa fa-minus"/>
-                            </a>
-                            <a class="btn btn-sm btn-success" title="Add">
-                                <i class="fa fa-plus"/>
-                            </a>
-                        </span>
-                    </div>
-                </dd>
-            </dl>
-
-            <!--Associations-->
+            <!--Associations -->
             <dl class="dl-horizontal">
                 <dt>
                     <label>Associations</label>
@@ -371,7 +285,12 @@
             </div>
         </div>
 
+        <!-- Third row - container for more specific editors -->
+        <div wicket:id="thirdRowContainer" class="col-xs-7 col-sm-6 col-md-offset-1 col-md-3" />
+
+
         <!--------------------------------------------------------- Third row (1) - Attribute Editor start --------------------------------------------------------->
+        <!--
         <div class="col-xs-7 col-sm-6 col-md-offset-1 col-md-3">
             <h3>Attribute Editor - (name)</h3>
 
@@ -413,7 +332,7 @@
                 </dd>
             </dl>
 
-            <!-- Strong and tolerant -->
+            <!-- Strong and tolerant ->
             <div class="row">
                 <div class="col-xs-6">
                     <dl class="dl-horizontal">
@@ -438,7 +357,7 @@
                 </div>
             </div>
 
-            <!-- Tolerant Value Pattern -->
+            <!-- Tolerant Value Pattern ->
             <dl class="dl-horizontal">
                 <dt>
                     <label>Tolerant value pattern</label>
@@ -471,7 +390,7 @@
                 </dd>
             </dl>
 
-            <!-- Intolerant Value Pattern -->
+            <!-- Intolerant Value Pattern ->
             <dl class="dl-horizontal">
                 <dt>
                     <label>Intolerant value pattern</label>
@@ -525,7 +444,7 @@
                 </dd>
             </dl>
 
-            <!-- Outbound -->
+            <!-- Outbound ->
             <dl class="dl-horizontal">
                 <dt>
                     <label>Outbound</label>
@@ -542,7 +461,7 @@
                 </dd>
             </dl>
 
-            <!-- Inbound -->
+            <!-- Inbound ->
             <dl class="dl-horizontal">
                 <dt>
                     <label>Inbound</label>
@@ -580,8 +499,8 @@
                     </div>
                 </dd>
             </dl>
-
         </div>
+        -->
         <!--------------------------------------------------------- Third row (1) - Attribute Editor end --------------------------------------------------------->
 
 
@@ -1162,6 +1081,63 @@
         </div>
         -->
         <!--------------------------------------------------------- Third row (6) - Credentials Editor end --------------------------------------------------------->
+
+
+        <!--------------------------------------------------------- Third row (7) - Dependency Editor start --------------------------------------------------------->
+        <div class="col-xs-7 col-sm-6 col-md-offset-1 col-md-3">
+            <h3>Object Type Dependencies</h3>
+
+            <!-- Dependencies -->
+            <!-- TODO - add dependency editor on panel to save vertical space in second row -->
+            <dl class="dl-horizontal">
+                <dt>
+                    <label>Dependency</label>
+                </dt>
+                <dd class="cap-dl-multivalue">
+                    <div class="input-group">
+                        <select class="form-control input-sm">
+                            <option>Strict</option>
+                            <option>Relaxed</option>
+                            <option>Lax</option>
+                        </select>
+                        <!-- TODO - find a way to insert small input here -->
+                        <!--<input type="text" class="form-control input-xs" value="1"/>-->
+                        <!--&nbsp; -->
+                        <span class="input-group-btn">
+                            <a class="btn btn-sm btn-danger" title="Remove">
+                                <i class="fa fa-minus"/>
+                            </a>
+                            <a class="btn btn-sm btn-success" title="Add">
+                                <i class="fa fa-plus"/>
+                            </a>
+                        </span>
+                    </div>
+                </dd>
+                <dd class="cap-dl-multivalue">
+                    <div class="input-group">
+                        <select class="form-control input-sm">
+                            <option>Strict</option>
+                            <option>Relaxed</option>
+                            <option>Lax</option>
+                        </select>
+                        <!-- TODO - find a way to insert small input here -->
+                        <!--<input type="text" class="form-control input-sm" value="2"/>-->
+                        <!--&nbsp;-->
+                        <span class="input-group-btn">
+                            <a class="btn btn-sm btn-danger" title="Remove">
+                                <i class="fa fa-minus"/>
+                            </a>
+                            <a class="btn btn-sm btn-success" title="Add">
+                                <i class="fa fa-plus"/>
+                            </a>
+                        </span>
+                    </div>
+                </dd>
+            </dl>
+        </div>
+        <!--------------------------------------------------------- Third row (7) - Dependency Editor end --------------------------------------------------------->
+
+
     </div>
 
 </wicket:panel>
